# Synapse

./: main.py  pyproject.toml
app/: main.py
app/models/: inference.py
app/routers/: inference.py
app/services/: inferenceService.py
